Compiler/tests/good/while2.nx
val x : int = 0;

while(x < 10)
{
    printn(x);
    
    x := x + 1;

    val x : int = 10; // Isto e outro x
}