Compiler/tests/bad/for1.nx
type t = [0 .. 10];

for(int x : t = 3; x < 10 ; t)
{   
    print(i);
}
